--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "A music catalogue app aims to provide a comprehensive dataset with intuitive UI which can be used to explore a genre, singer, composer, theme, instrument or any other metric to research level.",
   "main": "dist/app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
-    "watch": "tsc --watch",
-    "serve-debug": "nodemon --inspect dist/app.js",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch\" \"npm run serve-debug\"",
+    "start": "node dist/app.js",
+    "build": "tsc",
+    "build:start": "tsc && node dist/app.js",
+    "build:watch": "tsc -w",
+    "start:debug": "nodemon --inspect dist/app.js",
+    "start:dev":"concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run start:debug\" \"npm run build:watch\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint \"src/**/*.{js,ts}\" -o ./lint-report.html -f html"
   },
@@ -34,6 +36,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   }
 }
