--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:start": "tsc && node dist/app.js",
     "build:watch": "tsc -w",
     "start:debug": "nodemon --inspect dist/app.js",
-    "start:dev":"concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run start:debug\" \"npm run build:watch\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run start:debug\" \"npm run build:watch\"",
+    "test": "jest --forceExit --detectOpenHandles",
     "lint": "eslint \"src/**/*.{js,ts}\" -o ./lint-report.html -f html"
   },
   "repository": {
@@ -26,13 +26,18 @@
   "homepage": "https://github.com/brajnacs/mausiqui#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.4.8",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "concurrently": "^6.2.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.12",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.5"
   },
   "dependencies": {
