--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "CommonJS",
     "esModuleInterop": true,
-    "target": "ESNext",
+    "target": "ES2019",
     "moduleResolution": "Node",
     "sourceMap": true,
     "outDir": "dist",
