--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "jest": "^27.0.6",
+    "mongodb-memory-server": "^7.3.6",
     "nodemon": "^2.0.12",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.5",
@@ -42,6 +43,12 @@
   },
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.13.7"
+  },
+  "config": {
+    "mongodbMemoryServer": {
+      "debug": "1"
+    }
   }
 }
